Initial Commit Able to create Friends using dummy activity